--- a/site/筑基期/古典概率/index.html
+++ b/site/筑基期/古典概率/index.html
@@ -5172,6 +5172,13 @@ ans=C^n_r=\frac{n!}{r!(n - r)!}
 <div class="arithmatex">\[
 \frac{\frac{n!m!C^n_m}{n}}{\frac{(n+m)!}{n+m}}=\frac{C^n_m * (n+m)}{C^{n+m}_m * n}=\frac{C^n_m}{C^{n+m-1}_m}
 \]</div>
+<hr />
+<p>一个人在口袋里放了 <span class="arithmatex">\(2\)</span> 盒火柴，每盒 <span class="arithmatex">\(n\)</span> 支，每次抽烟时从口袋随机拿出一盒（抽出甲盒或乙盒）并用掉一支烟，到某次他迟早会发现：取出的那一盒空了，问这时候另外一盒恰好有 <span class="arithmatex">\(m\)</span> 支火柴的概率是多少？</p>
+<blockquote>
+<p>每一次抽取只有等概率两种选择，要么抽甲的，要么抽乙的，抽到一定时候，会发现抽到盒子里面没有烟了，这种概率是否符合一棵超级庞大的概率树呢？</p>
+<p>由于发现某盒为空时就会停止，说明这棵概率树并不是一颗完全树，即叶子节点并不都处于同一层，但是我们可以添加虚拟节点来延长比较短的那个分支，让这棵树的叶子节点都处于同一层，计算概率时只需要统计由这个叶子节点引发的虚拟叶子节点的个数占总叶子节点的个数多少就可以求出该叶子节点引发的概率了</p>
+<p>回到题目，要有利于题目条件的发生，则必须要抽 <span class="arithmatex">\(2n - m + 1\)</span> 次才能发现某盒已经空了，且剩下那一盒有 <span class="arithmatex">\(m\)</span> 支烟，</p>
+</blockquote>
 
 
 
