--- a/site/筑基期/古典概率/index.html
+++ b/site/筑基期/古典概率/index.html
@@ -5195,6 +5195,14 @@ ans=C^n_r=\frac{n!}{r!(n - r)!}
 \frac{\frac{17!}{6!5!2!4!} * \frac{21!}{5!4!12!} * 5! * \frac{4!}{2!2!} * \frac{12!}{3!3!3!3!}}{17 ^ {21}}=\frac{17!21!}{{2!}^3 {3!}^4 4! 5! 6! 17^{21}}
 \]</div>
 <hr />
+<p>『题目』<span class="arithmatex">\(n\)</span> 本书随机地分给甲、乙二人，问甲、乙各至少得到 <span class="arithmatex">\(1\)</span> 本书的概率是多少？</p>
+<blockquote>
+<p>事件总数有 <span class="arithmatex">\(2 ^ n\)</span> 种</p>
+<p>不利于题目事件发生，也就是甲得到 0 本或者乙得到 0 本，有 <span class="arithmatex">\(2\)</span> 种，所以有利于题目事件发生的概率为：</p>
+</blockquote>
+<div class="arithmatex">\[
+1 - \frac{1}{2 ^ {n - 1}}
+\]</div>
 
 
 
