--- a/site/筑基期/古典概率/index.html
+++ b/site/筑基期/古典概率/index.html
@@ -5206,7 +5206,9 @@ ans=C^n_r=\frac{n!}{r!(n - r)!}
 <hr />
 <p>『题目』甲、乙两人下棋，每局甲胜的概率为 <span class="arithmatex">\(a\)</span>，乙胜的概率为 <span class="arithmatex">\(b\)</span>，假设没有和局的情况发生，由于 <span class="arithmatex">\(a &gt; b\)</span> 为了考虑公平性，最终决定胜负规则如下：到什么时候为止，甲连胜三局则甲胜；到什么时候为止，乙连胜两局则乙胜；问甲最终胜的概率？</p>
 <blockquote>
-<p>如果到达某一轮时，是甲赢，假设此时是第 <span class="arithmatex">\(n\)</span> 轮，如果甲最终赢，则后缀一定是 "甲甲甲"，为了方便研究，记 <span class="arithmatex">\(E\)</span> 为当前轮次甲赢，记 <span class="arithmatex">\(F\)</span> 为当前轮次乙赢，则后缀一定是 <span class="arithmatex">\(EEE\)</span> 且前面 <span class="arithmatex">\(n-3\)</span> 轮不能出现 <span class="arithmatex">\(EEE\)</span> 和 <span class="arithmatex">\(FF\)</span> 且最后一个必定是 <span class="arithmatex">\(F\)</span>，这种概率是多少呢？这种概率可以用「线性dp」来解</p>
+<p>如果到达某一轮时，是甲赢，假设此时是第 <span class="arithmatex">\(n\)</span> 轮，如果甲最终赢，则后缀一定是 "甲甲甲"，为了方便研究，记 <span class="arithmatex">\(E\)</span> 为当前轮次甲赢，记 <span class="arithmatex">\(F\)</span> 为当前轮次乙赢，则后缀一定是 <span class="arithmatex">\(EEE\)</span> 且前面 <span class="arithmatex">\(n-3\)</span> 轮不能出现 <span class="arithmatex">\(EEE\)</span> 和 <span class="arithmatex">\(FF\)</span> 且最后一个必定是 <span class="arithmatex">\(F\)</span>，这种概率是多少呢？这种概率当然用「线性dp」来解，那能不能用一条公式求解呢？仔细想想，不能出现连续的 <span class="arithmatex">\(EEE\)</span> 和 <span class="arithmatex">\(FF\)</span> 说明该序列一定是由 <span class="arithmatex">\(E\)</span>、<span class="arithmatex">\(EE\)</span>、<span class="arithmatex">\(F\)</span> 组合，且 <span class="arithmatex">\(E\)</span> 和 <span class="arithmatex">\(EE\)</span> 不能连续出现，<span class="arithmatex">\(F\)</span> 与 <span class="arithmatex">\(F\)</span> 之间也不能连续出现;</p>
+<p><span class="arithmatex">\(E\)</span> 发生的概率为 <span class="arithmatex">\(a\)</span>，<span class="arithmatex">\(EE\)</span> 发生的概率为 <span class="arithmatex">\(a^2\)</span>，<span class="arithmatex">\(F\)</span> 发生的概率为 <span class="arithmatex">\(b\)</span></p>
+<p>若 <span class="arithmatex">\(E\)</span> 有 <span class="arithmatex">\(x\)</span> 个，<span class="arithmatex">\(EE\)</span> 有 <span class="arithmatex">\(y\)</span> 个，要求甲最终胜，则乙要么有 <span class="arithmatex">\(x+y\)</span> 个，要么有 <span class="arithmatex">\(x+y+1\)</span> 个</p>
 </blockquote>
 
 
