--- a/site/筑基期/古典概率/index.html
+++ b/site/筑基期/古典概率/index.html
@@ -5266,15 +5266,29 @@ ans=C^n_r=\frac{n!}{r!(n - r)!}
 \]</div>
 <hr />
 <p>『题目』有 <span class="arithmatex">\(21\)</span> 本不同的书，随机地分给 <span class="arithmatex">\(17\)</span> 个人，问 <span class="arithmatex">\(6\)</span> 个人得 <span class="arithmatex">\(0\)</span> 本，<span class="arithmatex">\(5\)</span> 个人得 <span class="arithmatex">\(1\)</span> 本，<span class="arithmatex">\(2\)</span> 人得 <span class="arithmatex">\(2\)</span> 本，<span class="arithmatex">\(4\)</span> 人得 <span class="arithmatex">\(3\)</span> 本这个事件发生的概率是多少？</p>
+<hr />
+<p>『题目』<span class="arithmatex">\(n\)</span> 本书随机地分给甲、乙二人，问甲、乙各至少得到 <span class="arithmatex">\(1\)</span> 本书的概率是多少？</p>
 <blockquote>
-<p>事件总和有 <span class="arithmatex">\(17 ^ {21}\)</span></p>
-<p>若要有利于题目事件发生，需要对 <span class="arithmatex">\(17\)</span> 分组，第一组分出 <span class="arithmatex">\(6\)</span> 人，第二组分出 <span class="arithmatex">\(5\)</span> 人，第三组分出 <span class="arithmatex">\(2\)</span> 人，第四组分出 <span class="arithmatex">\(4\)</span> 人，有 <span class="arithmatex">\(\frac{17!}{6!5!2!4!}\)</span> 种分法；要将 <span class="arithmatex">\(21\)</span> 本书分成 <span class="arithmatex">\(3\)</span> 组，每组分别有 <span class="arithmatex">\(\{5, 4, 12\}\)</span> 本书，有 <span class="arithmatex">\(\frac{21!}{5!4!12!}\)</span> 种分法，对于第一组 <span class="arithmatex">\(5\)</span> 需要按个数 <span class="arithmatex">\(1\)</span> 排列有 <span class="arithmatex">\(5!\)</span> 种排列方法，对于第二组 <span class="arithmatex">\(4\)</span> 需要按照个数 <span class="arithmatex">\(2\)</span> 排列有 <span class="arithmatex">\(\frac{4!}{2!2!}\)</span> 种排列方法，对与第三组 <span class="arithmatex">\(12\)</span> 需要按照个数 <span class="arithmatex">\(3\)</span> 排列有 <span class="arithmatex">\(\frac{12!}{3!3!3!3!}\)</span> 种排列方法</p>
-<p>有利于题目事件发生的概率为：</p>
+<p>事件总数有 <span class="arithmatex">\(2 ^ n\)</span> 种</p>
+<p>不利于题目事件发生，也就是甲得到 0 本或者乙得到 0 本，有 <span class="arithmatex">\(2\)</span> 种，所以有利于题目事件发生的概率为：</p>
 </blockquote>
 <div class="arithmatex">\[
-\frac{\frac{17!}{6!5!2!4!} * \frac{21!}{5!4!12!} * 5! * \frac{4!}{2!2!} * \frac{12!}{3!3!3!3!}}{17 ^ {21}}=\frac{17!21!}{{2!}^3 {3!}^4 4! 5! 6! 17^{21}}
+1 - \frac{1}{2 ^ {n - 1}}
 \]</div>
 <hr />
+<p>『题目』甲、乙两人下棋，每局甲胜的概率为 <span class="arithmatex">\(a\)</span>，乙胜的概率为 <span class="arithmatex">\(b\)</span>，假设没有和局的情况发生这意味着 <span class="arithmatex">\(a+b=1\)</span> ，由于 <span class="arithmatex">\(a &gt; b\)</span> 为了考虑公平性，最终决定胜负规则如下：到什么时候为止，甲连胜三局则甲胜；到什么时候为止，乙连胜两局则乙胜；问甲最终胜的概率？</p>
+<blockquote>
+<p>如果到达某一轮时，是甲赢，假设此时是第 <span class="arithmatex">\(n\)</span> 轮，如果甲最终赢，则后缀一定是 "甲甲甲"，为了方便研究，记 <span class="arithmatex">\(E\)</span> 为当前轮次甲赢，记 <span class="arithmatex">\(F\)</span> 为当前轮次乙赢，则后缀一定是 <span class="arithmatex">\(EEE\)</span> 且前面 <span class="arithmatex">\(n-3\)</span> 轮不能出现 <span class="arithmatex">\(EEE\)</span> 和 <span class="arithmatex">\(FF\)</span> 且最后一个必定是 <span class="arithmatex">\(F\)</span>，这种概率是多少呢？这种概率当然用「线性dp」来解，那能不能用一条公式求解呢？仔细想想，不能出现连续的 <span class="arithmatex">\(EEE\)</span> 和 <span class="arithmatex">\(FF\)</span> 说明该序列一定是由 <span class="arithmatex">\(E\)</span>、<span class="arithmatex">\(EE\)</span>、<span class="arithmatex">\(F\)</span> 组合，且 <span class="arithmatex">\(E\)</span> 和 <span class="arithmatex">\(EE\)</span> 不能连续出现，<span class="arithmatex">\(F\)</span> 与 <span class="arithmatex">\(F\)</span> 之间也不能连续出现;</p>
+<p><span class="arithmatex">\(E\)</span> 发生的概率为 <span class="arithmatex">\(a\)</span>，<span class="arithmatex">\(EE\)</span> 发生的概率为 <span class="arithmatex">\(a^2\)</span>，<span class="arithmatex">\(F\)</span> 发生的概率为 <span class="arithmatex">\(b\)</span>;</p>
+<p>若要让甲最终胜，则最后一定以 <span class="arithmatex">\(F\)</span> 结尾然后再接 <span class="arithmatex">\(EEE\)</span> </p>
+<p>一开始要么 <span class="arithmatex">\(F\)</span> 发生，要么 <span class="arithmatex">\(F\)</span> 不发生；假设一开始 <span class="arithmatex">\(F\)</span> 并没有发生，且 <span class="arithmatex">\(F\)</span> 发生了 <span class="arithmatex">\(n\)</span> 次，则对于每一个 <span class="arithmatex">\(F\)</span> 的前面，要么发生 <span class="arithmatex">\(E\)</span> 要么发生 <span class="arithmatex">\(EE\)</span>，所以对于这 <span class="arithmatex">\(n\)</span> 个位置可以发生概率总和为 <span class="arithmatex">\((a + a^2) ^ n\)</span>，有利于甲最终胜的概率为：<span class="arithmatex">\(a^3(a+a^2)^nb^n\)</span>；若一开始 <span class="arithmatex">\(F\)</span> 发生了，且后续 <span class="arithmatex">\(F\)</span> 发生了 <span class="arithmatex">\(n\)</span> 次，有利于甲最终胜的概率为：<span class="arithmatex">\(ba^3(a+a^2)^nb^n\)</span>，综上，甲最终胜的概率为：</p>
+</blockquote>
+<div class="arithmatex">\[
+\sum^{\infty}_{n=0}(1+b)a^3(a+a^2)^nb^n=(1+b)a^3\sum^{\infty}_{n=0}(ab(1+a))^n
+\]</div>
+<blockquote>
+<p>根据等比数列可化成：</p>
+</blockquote>
 
 
 
