--- a/site/筑基期/古典概率/index.html
+++ b/site/筑基期/古典概率/index.html
@@ -5266,6 +5266,11 @@ ans=C^n_r=\frac{n!}{r!(n - r)!}
 \]</div>
 <hr />
 <p>『题目』有 <span class="arithmatex">\(21\)</span> 本不同的书，随机地分给 <span class="arithmatex">\(17\)</span> 个人，问 <span class="arithmatex">\(6\)</span> 个人得 <span class="arithmatex">\(0\)</span> 本，<span class="arithmatex">\(5\)</span> 个人得 <span class="arithmatex">\(1\)</span> 本，<span class="arithmatex">\(2\)</span> 人得 <span class="arithmatex">\(2\)</span> 本，<span class="arithmatex">\(4\)</span> 人得 <span class="arithmatex">\(3\)</span> 本这个事件发生的概率是多少？</p>
+<blockquote>
+<p>事件总和有 <span class="arithmatex">\(17 ^ {21}\)</span></p>
+<p>若要有利于题目事件发生，需要对 <span class="arithmatex">\(17\)</span> 分组，第一组分出 <span class="arithmatex">\(6\)</span> 人，第二组分出 <span class="arithmatex">\(5\)</span> 人，第三组分出 <span class="arithmatex">\(2\)</span> 人，第四组分出 <span class="arithmatex">\(4\)</span> 人，有 <span class="arithmatex">\(\frac{17!}{6!5!2!4!}\)</span> 种分法；要将 <span class="arithmatex">\(21\)</span> 本书分成 <span class="arithmatex">\(3\)</span> 组，每组分别有 <span class="arithmatex">\(\{5, 4, 12\}\)</span> 本书，有 <span class="arithmatex">\(\frac{21!}{5!4!12!}\)</span> 种分法，对于第一组 <span class="arithmatex">\(5\)</span> 需要按个数 <span class="arithmatex">\(1\)</span> 排列有 <span class="arithmatex">\(5!\)</span> 种排列方法，对于第二组 <span class="arithmatex">\(4\)</span> 需要按照个数 <span class="arithmatex">\(2\)</span> 排列有 <span class="arithmatex">\(\frac{4!}{2!2!}\)</span> 种排列方法，对与第三组 <span class="arithmatex">\(12\)</span> 需要按照个数 <span class="arithmatex">\(3\)</span> 排列有 <span class="arithmatex">\(\frac{12!}{3!3!3!3!}\)</span> 种排列方法</p>
+<p>有利于题目事件发生的概率为：</p>
+</blockquote>
 <hr />
 <p>『题目』<span class="arithmatex">\(n\)</span> 本书随机地分给甲、乙二人，问甲、乙各至少得到 <span class="arithmatex">\(1\)</span> 本书的概率是多少？</p>
 <blockquote>
