--- a/site/筑基期/古典概率/index.html
+++ b/site/筑基期/古典概率/index.html
@@ -5272,7 +5272,7 @@ ans=C^n_r=\frac{n!}{r!(n - r)!}
 <p>有利于题目事件发生的概率为：</p>
 </blockquote>
 <div class="arithmatex">\[
-\frac{\frac{17!}{6!5!2!4!} * \frac{21!}{5!4!12!} * 5! * \frac{4!}{2!2!} * \frac{12!}{3!3!3!3!}}{17 ^ {21}}
+\frac{\frac{17!}{6!5!2!4!} * \frac{21!}{5!4!12!} * 5! * \frac{4!}{2!2!} * \frac{12!}{3!3!3!3!}}{17 ^ {21}}=\frac{17!21!}{ {2!}^3 {3!}^4 4! 5! 6! 17^{21} }
 \]</div>
 <hr />
 <p>『题目』<span class="arithmatex">\(n\)</span> 本书随机地分给甲、乙二人，问甲、乙各至少得到 <span class="arithmatex">\(1\)</span> 本书的概率是多少？</p>
